--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,10 @@
     "react-typical": "^0.1.3",
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "bootstrap": "^4.5.0",
+    "react-bootstrap": "^1.2.2",
+    "@fortawesome/free-brands-svg-icons": "^5.14.0"
   },
   "scripts": {
     "start": "react-scripts start",
